mcp/1.4/modules/ROOT/pages/mcp-connector-upgrade-migrate.adoc
= Upgrading MCP Connector to Version 1.4


MCP Connector 0.1.0-BETA is deprecated. Use MCP Connector 1.x instead. MCP Connector 1.x is not backward-compatible with the 0.1.0-BETA version of this connector.

== Supported Upgrade Paths

[%header,cols="50a,50a"]
|===
|From Version | To Version
|1.0 |1.x
|===

== Changes in 1.4

* The MCP Java SDK is upgraded to the latest release version (1.0.0).
* Both the server and client transports now default to 2025-06-18 as the preferred version of the protocol.
* Both the server and client transports now set the `Mcp-Protocol-Version` header to the version negotiated upon connection initialization.

== Changes in 1.3

* The *MCP Server - On New Session Listener* source now supports custom rejection headers with the new *Reject With Headers* field.

== Changes in 1.2

* MCP Connector now supports distributed tracing.

== Changes in 1.1

* A *Default Request Headers* parameter is added to both the SSE Client and Streamable Http Client connection types within the MCP Client configuration. This parameter lets you specify custom headers to send with every request to the MCP server.

== Changes in 1.0

This release contains the following changes:

* Streamable HTTP Transport
+
Support for Streamable HTTP transport is added. This transport method replaces the deprecated SSE transport for better scalability and cloud compatibility.
* Custom Response Headers 
+
Added support for custom headers on all exposed endpoints.
* Enhanced Error Handling
+
Improved error handling with specific error types and better error messages.
* Performance Improvements
+
Added caching support and timeout configurations.
* Input Validation
+
Enhanced parameter validation with JSON schema constraints.
* These new types are added:
** Call Tool Response
** Resource Content
** Resource Metadata
** Tool Metadata
** New Session Request
** Resource Request
** Text Tool Response Content
** Text Resource Tool Response Content
** Blob Resource Tool Response Content
** Blob Resource
* The `mule.http.service.implementation=NETTY` property is no longer required and must be <<remove-property,removed>>. 
* The `<mcp:resource-content>` element under `<mcp:resource-listener>` is renamed to `<mcp:resource-listener-content>`. If you used the 0.1.0-BETA version of this connector, you must manually rename the element in the connector's configuration XML.

== Removed Features

* The `<mcp:resource-capabilities>` and `<mcp:tool-capabilities>` configuration attributes are removed. 
* The `<mcp:add-dynamic-resource>` operation is removed. The MCP server always advertises itself as non-dynamic.

[[update-pom]]
== Update the POM File Dependency

If you are using MCP Connector 0.1.0-BETA, you must update your POM file dependency to:

[source,xml]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-mcp-connector</artifactId>
  <version>1.0.0</version>
  <classifier>mule-plugin</classifier>
</dependency>
----

Note that the `<groupId>com.mulesoft.connector</groupId>` is changed so that `connector` is now plural `connectors`. 


[[remove-property]]
== Remove the NETTY Property

If you used the 0.1.0-BETA version of MCP Connector and added the `-Dmule.http.service.implementation=NETTY` property, remove it anywhere you added it, including the:

* `AnypointStudio.ini` file
* Debug configuration
* Apps' properties


== See Also

* xref:mcp-connector-reference.adoc[MCP Connector Reference]
* xref:mcp-connector-examples.adoc[MCP Connector Examples]
* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
